[gd_scene load_steps=13 format=3 uid="uid://bxw67mtklk4w5"]

[ext_resource type="Script" path="res://Scripts/ExpoundclassicsPanel.gd" id="1_5g43j"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="2_a1oci"]
[ext_resource type="AudioStream" uid="uid://daxlyrk7pr0bu" path="res://Asset/sound/翻阅.mp3" id="2_cvcn1"]
[ext_resource type="Resource" uid="uid://qopivlttvt12" path="res://dialogues/街道.dialogue" id="2_rgova"]
[ext_resource type="Texture2D" uid="uid://dahuc8gb2blc" path="res://Asset/other/0_red.png" id="5_g5bwt"]
[ext_resource type="PackedScene" uid="uid://5qxpn6avk7bx" path="res://Scene/prefab/ShopItem.tscn" id="7_srrjc"]
[ext_resource type="Texture2D" uid="uid://c8217n5l3n1vd" path="res://Asset/辩论.png" id="8_8qym1"]
[ext_resource type="Texture2D" uid="uid://d1ey12yrtc7ec" path="res://Asset/items/兵法.png" id="8_iid6c"]
[ext_resource type="FontFile" uid="uid://qv74ebpr4i31" path="res://Asset/Font/VonwaonBitmap-16px.ttf" id="9_mixup"]

[sub_resource type="Animation" id="Animation_g5rj7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(256, 256)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect/TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(73, 52)]
}

[sub_resource type="Animation" id="Animation_4k2fk"]
resource_name = "click"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect/TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(73, 52), Vector2(73, 60), Vector2(73, 40), Vector2(73, 52)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t5pam"]
_data = {
"RESET": SubResource("Animation_g5rj7"),
"click": SubResource("Animation_4k2fk")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g43j")
dialogue_resource = ExtResource("2_rgova")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Timer"]
stream = ExtResource("2_cvcn1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1408.0
offset_top = -884.0
offset_right = 1584.0
offset_bottom = 728.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PanelContainer")
libraries = {
"": SubResource("AnimationLibrary_t5pam")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -669.0
offset_top = -411.0
offset_right = 669.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(630.615, 267.699)
theme = ExtResource("2_a1oci")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect"]
layout_mode = 0
offset_left = 73.0
offset_top = 52.0
offset_right = 329.0
offset_bottom = 308.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 144.0
offset_top = 66.0
offset_right = 400.0
offset_bottom = 322.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 138.0
offset_top = 61.0
offset_right = 394.0
offset_bottom = 317.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 144.0
offset_top = 68.0
offset_right = 400.0
offset_bottom = 324.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 138.0
offset_top = 53.0
offset_right = 394.0
offset_bottom = 309.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -403.0
offset_top = -284.0
offset_right = -147.0
offset_bottom = -28.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 123.0
offset_top = 64.0
offset_right = 379.0
offset_bottom = 320.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 117.0
offset_top = 51.0
offset_right = 373.0
offset_bottom = 307.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 123.0
offset_top = 59.0
offset_right = 379.0
offset_bottom = 315.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 131.0
offset_top = 66.0
offset_right = 387.0
offset_bottom = 322.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 121.0
offset_top = 66.0
offset_right = 377.0
offset_bottom = 322.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -81.0
offset_top = 87.0
offset_right = 175.0
offset_bottom = 343.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -167.0
offset_top = 20.0
offset_right = 89.0
offset_bottom = 276.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -116.0
offset_top = -40.0
offset_right = 140.0
offset_bottom = 216.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -123.0
offset_top = -55.0
offset_right = 133.0
offset_bottom = 201.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -98.0
offset_top = -48.0
offset_right = 158.0
offset_bottom = 208.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -119.0
offset_top = -56.0
offset_right = 137.0
offset_bottom = 200.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -80.0
offset_top = -38.0
offset_right = 176.0
offset_bottom = 218.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 850.0
offset_top = 1.0
offset_right = 1106.0
offset_bottom = 257.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -129.0
offset_top = -67.0
offset_right = 127.0
offset_bottom = 189.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -135.0
offset_top = -60.0
offset_right = 121.0
offset_bottom = 196.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -136.0
offset_top = -57.0
offset_right = 120.0
offset_bottom = 199.0
texture = ExtResource("8_8qym1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect/TextureRect"]
layout_mode = 0
offset_left = -90.0
offset_top = 15.0
offset_right = 166.0
offset_bottom = 271.0
texture = ExtResource("8_8qym1")

[node name="resideTxt" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 593.0
offset_top = 189.0
offset_right = 1580.0
offset_bottom = 356.0
theme_override_font_sizes/font_size = 81
text = "倒计时：10"
horizontal_alignment = 2

[node name="yourscore" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 731.0
offset_right = 1543.0
offset_bottom = 898.0
theme_override_font_sizes/font_size = 81
text = "你的得分：
0"
horizontal_alignment = 1

[node name="title" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 338.0
offset_top = 449.0
offset_right = 1590.0
offset_bottom = 531.0
theme_override_font_sizes/font_size = 81
text = "请点击图书并获得积分"
horizontal_alignment = 1

[node name="starttitle" type="Label" parent="."]
layout_mode = 2
offset_left = 366.0
offset_top = 188.0
offset_right = 1509.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 81
text = "大儒辩论启动中..."

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
layout_mode = 1
offset_left = 1597.0
offset_top = 85.0
offset_right = 1661.0
offset_bottom = 149.0
texture_normal = ExtResource("5_g5bwt")
texture_pressed = ExtResource("5_g5bwt")
texture_hover = ExtResource("5_g5bwt")
texture_disabled = ExtResource("5_g5bwt")
texture_focused = ExtResource("5_g5bwt")
stretch_mode = 0

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = 150.0
offset_right = 386.0
offset_bottom = 371.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "点击开始游戏"

[node name="itemUse" parent="." instance=ExtResource("7_srrjc")]
visible = false
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 334.0
offset_top = 743.0
offset_right = 422.0
offset_bottom = 827.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(2, 2)
tooltip_text = "诸子百家论集"
theme = ExtResource("2_a1oci")
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"
img = ExtResource("8_iid6c")
itemstype = 3

[node name="Label" type="Label" parent="itemUse"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.055
anchor_right = 0.5
anchor_bottom = 0.059
offset_left = -42.0
offset_top = -61.62
offset_right = 68.0
offset_bottom = -3.956
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("9_mixup")
theme_override_font_sizes/font_size = 16
text = "点击图标使用
快速结束辩经
（库存：1）"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="button_down" from="TextureButton" to="." method="_on_exit_button_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="gui_input" from="itemUse" to="." method="_on_item_use_gui_input"]
